MessageWindow overflow behavior fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,24 +3,27 @@
 @tailwind utilities;
 
 @layer utilities {
-  /* .scrollbar::-webkit-scrollbar { */
-  /*   background-color: white; */
-  /*   width: 10px; */
-  /* } */
+  .scrollbar::-webkit-scrollbar {
+    background-color: white;
+    width: 10px;
+  }
 
-  /* .scrollbar::-webkit-scrollbar-track { */
-  /*   border-radius: 100vh; */
-  /*   background-color: transparent; */
-  /* } */
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background-color: transparent;
+  }
 
-  /* .scrollbar::-webkit-scrollbar-thumb { */
-  /*   background-color: black; */
-  /*   border-radius: 100vh; */
-  /* } */
-  /* .scrollbar:hover .scrollbar::-webkit-scrollbar-thumb { */
-  /*   background: #d4d4d8; */
-  /*   border-radius: 100vh; */
-  /* } */
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 100vh;
+  }
+  .scrollbar::-webkit-scrollbar-thumb:hover  {
+    background: #BBB;
+  }
+
+  .scrollbar::-webkit-scrollbar-track:hover .scrollbar::-webkit-scrollbar-thumb  {
+    background: black;
+  }
 
   #logo {
     transition-property: opacity;
